--- a/backend/package.json
+++ b/backend/package.json
@@ -11,17 +11,18 @@
     "cors": "2.8.5",
     "dayjs": "1.11.10",
     "dotenv": "10.0.0",
-    "express": "4.17.1",
+    "express": "4.21.2",
     "jsonwebtoken": "9.0.2",
     "lodash": "4.17.21",
     "multer": "1.4.5-lts.1",
-    "mysql2": "3.6.1",
+    "mysql2": "3.12.0",
     "pdf-lib": "1.17.1",
     "pino": "8.15.3",
     "pino-pretty": "10.2.0",
     "qrcode-svg": "1.1.0",
     "sharp": "0.32.6",
-    "uuid": "9.0.1"
+    "uuid": "9.0.1",
+    "zod": "3.24.1"
   },
   "devDependencies": {
     "nodemon": "3.0.1"
